fix: hide overflow-x to avoid shifts

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -181,7 +181,9 @@ html {
   opacity: 1;
   transform: translateY(0);
 }
-
+html, body {
+  overflow-x: hidden;
+}
 body {
   font-family: var(--font-family);
   font-size: var(--font-size);
